--- a/css/theme.css
+++ b/css/theme.css
@@ -8,3 +8,10 @@
     --border: #383f53;
 
 }
+
+.hero-bg {
+    /* background-image: url("C:\Users\danjs_qvy72dj\Desktop\Devslopes\Javascript\Portfolio\week8imageassets\week 8 image assets\hero-pattern.webp"); */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
