--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,34 @@
     transform: translateX(0);
 }
 
+.theme-body .theme-tab {
+    position: absolute;
+    top: 0;
+    transform: translateX(-100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 50px;
+    border: none;
+    background: #495fef;
+    color: white;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    left: 1px;
+}
+
+.theme-tab i {
+    font-size: 1rem;
+    transition: 0.4s;
+    pointer-events: none;
+}
+
+.theme-panel.open .theme-tab i {
+    transform: scaleX(-1);
+}
+
+
 .navbar {
     display: flex;
     flex-flow: row nowrap;
@@ -95,6 +123,51 @@
     line-height: 1.5;
 }
 
+.search-container label {
+    align-items: center;
+    position: relative;
+    display: inline-flex;
+}
+
+.search-input {
+    padding: 0.75rem 1.5rem;
+    background-color: #f1f3f5;
+    border: 1px solid #f1f3f5;
+    border-radius: 50rem;
+}
+
+.search-input:focus {
+    border-color: #4dabf7;
+    outline: none;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.0125), 0 0 8 rgba(34, 139, 230, 0.5);
+}
+
+.search-container .fa-search {
+    position: absolute;
+    right: 10px;
+}
+
+.portfolio-filter-nav {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+}
+
+.portfolio-filter-nav .filter-link {
+    padding: 0 1rem;
+    font-size: 0.8125rem;
+    line-height: 1.6rem;
+    letter-spacing: 1.63px;
+    font-weight: 700;
+}
+
+.portfolio-filter-nav .filter-link:hover {
+    cursor: pointer;
+}
+
+.portfolio-filter-nav .filter-link.active {
+    color: #495fef;
+}
 
 .main-menu {display: flex;}
 
