--- a/css/theme.css
+++ b/css/theme.css
@@ -9,9 +9,20 @@
 
 }
 
-.hero-bg {
-    /* background-image: url("C:\Users\danjs_qvy72dj\Desktop\Devslopes\Javascript\Portfolio\week8imageassets\week 8 image assets\hero-pattern.webp"); */
+[data-theme="light"].hero-bg {
+    background-image: url("../week8imageassets/imageAssets/hero-pattern.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+[data-theme="dark"]  {
+    --bg: #171a23;
+    --bg-panel: #f1f1f1;
+    --color-headings: #fff;
+    --color-text-opacity: rgba(255, 255, 255, 0.7);
+    --color-text: #fff;
+    --color-text-base: #161c2d;
+    --border: #ced4da;
+
 }
