--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@
     color: #495fef;
 }
 
-.portfolio-grid {
+.portfolio-grid, #portfolio-container {
     display: flex;
     flex-wrap: wrap;
     padding: 3rem 1rem;
