--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     position: fixed;
     right: 0;
     top: 25%;
-    z-index: 100;
+    z-index: 1001;
     transition: 0.4s;
     transform: translateX(100%);
 }
@@ -278,7 +278,7 @@
     display: flex;
     justify-content: center;
     height: 250px;
-    margin: 200px 0;
+    margin: 200px 0 50px;
     pointer-events: none;
 }
 
@@ -470,5 +470,4 @@
 [data-animation='slideInOutTop'].is-visible .modal-dialog {
     transform: none;
 }
-
 
